# destructivator

./: .coveralls.yml  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs
assets/: destructivator.ignore  type-mapping.toml
fixtures/: .gitignore  README.md
fixtures/classes/: AnotherClass.cls
fixtures/pages/: SomePage.page
fixtures/src/: package.xml
fixtures/src/applications/: standard__AppLauncher.app  standard__Chatter.app  standard__Community.app  standard__Content.app  standard__LightningSales.app  standard__LightningSalesConsole.app  standard__LightningService.app  standard__Marketing.app  standard__Platform.app  standard__Sales.app  standard__Service.app  standard__ServiceConsole.app  standard__Sites.app
fixtures/src/assignmentRules/: Case.assignmentRules  Lead.assignmentRules
fixtures/src/classes/: SomeClass.cls
fixtures/src/cleanDataServices/: DataCloudGeoLocation.cleanDataService
fixtures/src/components/: SomeComponent.component-meta.xml
fixtures/src/flows/: SomeFlow-1.flow
fixtures/src/layouts/: Task-Task Layout.layout
fixtures/src/objectTranslations/: Order__c-en_US.objectTranslation
fixtures/src/objects/: Order__c.object
fixtures/src/pages/: SomePage.page-meta.xml
fixtures/src/profiles/: Admin.profile  Analytics Cloud Integration User.profile  Analytics Cloud Security User.profile  Authenticated Website.profile  Chatter External User.profile  Chatter Free User.profile  Chatter Moderator User.profile  ContractManager.profile  ReadOnly.profile  (+27 more)
src/: forcedotcom.rs  git.rs  lib.rs  main.rs
tests/: branch_all_new_test.rs  lib.rs
(+2 files in other folders)
