[package]
name = "destructivator"
description = "Automated Force.com project rollback with git integration."
version = "0.1.0"
authors = ["An Camchéachta"]
build = "build.rs"

[build-dependencies]
git2 = "0.6.8"

[dependencies]
argparse = "0.2.1"
config = "0.7.0"
git2 = "0.6.8"
ignore = "0.3.1"

[[test]]
name = "destructivator-tests"
path = "tests/lib.rs"